objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AccountNameChangeRestriction</fullName>
        <active>true</active>
        <description>This rule will make sure that the account name can only by changed by system admins (or an alternate set of admin users)</description>
        <errorConditionFormula>AND(
ISCHANGED(Name),
NOT(ISBLANK(CAN__c)),
($Profile.Name &lt;&gt; &quot;System Administrator&quot;),
($Profile.Name &lt;&gt; &quot;API Only&quot;),
AND(
OR(
($Profile.Name &lt;&gt; &quot;Payroll Support&quot;),
($User.Role__c &lt;&gt; &quot;KA Onboarding&quot;)
),
OR(
($Profile.Name &lt;&gt; &quot;Onboarding Support&quot;),
($User.Role__c &lt;&gt; &quot;KA Onboarding&quot;)
),
OR(
($Profile.Name &lt;&gt; &quot;Tier2SBCareAgent&quot;),
($User.Role__c &lt;&gt; &quot;Tier2SupportDesktop&quot;)
),
OR(
($Profile.Name &lt;&gt; &quot;Tier2SBCareAgent&quot;),
($User.Role__c &lt;&gt; &quot;Tier2ServiceDesktop&quot;)
),
OR(
($Profile.Name &lt;&gt; &quot;Tier3SBCareAgent&quot;),
($User.Role__c &lt;&gt; &quot;Tier3Desktop&quot;)
),
OR(
($Profile.Name &lt;&gt; &quot;Tier2SBCDTandOL&quot;),
($User.Role__c &lt;&gt; &quot;DTOL Tier 2&quot;)
),
OR(
($Profile.Name &lt;&gt; &quot;SB Care DT and OL&quot;),
($User.Role__c &lt;&gt; &quot;DTOL Mgr&quot;)
)
)
)</errorConditionFormula>
        <errorMessage>You are not authorized to change the name of this Customer. Please contact  your system administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AccountNameSplChars</fullName>
        <active>true</active>
        <description>This is a constraint on the characters that can be entered in the Account name field.
This validation is applicable where company id is null and for users with all profiles except &apos;API Only&apos; and &apos;System Administrator&apos;</description>
        <errorConditionFormula>AND(NOT(REGEX(Name,&quot;[a-zA-ZÃƒâ‚¬Ãƒï¿½Ãƒâ€šÃƒÆ’Ãƒâ€žÃƒâ€¦Ãƒâ€ Ãƒâ€¡ÃƒË†Ãƒâ€°ÃƒÅ Ãƒâ€¹ÃƒÅ’Ãƒï¿½ÃƒÅ½Ãƒï¿½Ãƒï¿½Ãƒâ€˜Ãƒâ€™Ãƒâ€œÃƒâ€�Ãƒâ€¢Ãƒâ€“Ãƒâ€”ÃƒËœÃƒâ„¢ÃƒÅ¡Ãƒâ€ºÃƒÅ“Ãƒï¿½ÃƒÅ¾ÃƒÅ¸ÃƒÂ ÃƒÂ¡ÃƒÂ¢ÃƒÂ£ÃƒÂ¤ÃƒÂ¥ÃƒÂ¦ÃƒÂ§ÃƒÂ¨ÃƒÂ©ÃƒÂªÃƒÂ«ÃƒÂ¬ÃƒÂ­ÃƒÂ®ÃƒÂ¯ÃƒÂ°ÃƒÂ±ÃƒÂ²ÃƒÂ³ÃƒÂ´ÃƒÂµÃƒÂ¶ÃƒÂ·ÃƒÂ¸ÃƒÂ¹ÃƒÂºÃƒÂ»ÃƒÂ¼ÃƒÂ½ÃƒÂ¾ÃƒÂ¿Ã…â€œÃ…â€™Ã¢â€šÂ£Ã¢â€šÂ¬Ã‚Â«Ã‚Â»0-9#-_/&amp;$!@*(){}?&apos;:;\&quot;\\[\\]. ]+&quot;)),( $Profile.Name &lt;&gt; &quot;API Only&quot; ),( $Profile.Name &lt;&gt;  &quot;System Administrator&quot;),(ISBLANK(Company_ID__c)))</errorConditionFormula>
        <errorDisplayField>of_Accounts__c</errorDisplayField>
        <errorMessage>Account Name can contain only alpha numeric values and these special characters-#,-,_,/, &amp;, $, !, @, *, (, ), {,},[,],?,&apos;,&quot;,:,;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PartnerIdIsRequired</fullName>
        <active>false</active>
        <description>When Customer Type is Partner, Partner Id is required</description>
        <errorConditionFormula>AND(ISPICKVAL(Customer_Type__c, &quot;Partner&quot;), ISBLANK(Partner_Id__c))</errorConditionFormula>
        <errorDisplayField>Partner_Id__c</errorDisplayField>
        <errorMessage>Partner Id is a required field when customer type is partner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PartnerNameIsRequired</fullName>
        <active>false</active>
        <description>When the customer type is Partner, the partner name is required</description>
        <errorConditionFormula>AND(ISPICKVAL(Customer_Type__c, &quot;Partner&quot;),  ISBLANK(Partner_Name__c))</errorConditionFormula>
        <errorDisplayField>Partner_Name__c</errorDisplayField>
        <errorMessage>Partner Name is required when Customer is of type Partner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PartnerTypeRequired</fullName>
        <active>true</active>
        <description>Customer Sub-Type is a required field when the customer type is Partner</description>
        <errorConditionFormula>AND (ISPICKVAL(Customer_Type__c, &quot;Partner&quot;), ISBLANK(TEXT(Customer_Sub_Type__c)), NOT(CONTAINS( UPPER($User.Username), &quot;DMIGR&quot;)))</errorConditionFormula>
        <errorDisplayField>Customer_Sub_Type__c</errorDisplayField>
        <errorMessage>Customer Sub-Type is a required field when Customer is a Partner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>coowner_and_owner_should_be_different</fullName>
        <active>true</active>
        <description>SA-520 (Account Owner and Co Owner cannot be same person)</description>
        <errorConditionFormula>AND( 
($Profile.Name &lt;&gt; &quot;System Administrator&quot;), 
($Profile.Name &lt;&gt; &quot;API Only&quot;), 
OwnerId=Co_Owner__r.Id 
)</errorConditionFormula>
        <errorDisplayField>Co_Owner__c</errorDisplayField>
        <errorMessage>The Account Owner and Co-Owner must be different. Change one or leave the Co-Owner field blank.</errorMessage>
    </validationRules>
</CustomObject>